<resources>
    <string name="app_name">TicTacToe</string>

    <string name="final_score_button">Final Score</string>
    <string name="reset_button">Reset</string>
    <string name="replay_button">Play Again</string>
    <string name="background_text"></string>
    <string name="tictactoeboard.png">TicTacToeBoard</string>
    <string name="tl"></string>
    <string name="tc"></string>
    <string name="tr"></string>
    <string name="ml"></string>
    <string name="mc"></string>
    <string name="mr"></string>
    <string name="bl"></string>
    <string name="bc"></string>
    <string name="br"></string>
    <string name="line"></string>
    <string name="textbg"></string>
    <string name="turnx" id="x">X\'s turn</string>
    <string name="turno" id="o">O\'s turn</string>
    <string name="exit" id="x">Exit game</string>
    <string name="scores" id="@+id/scores"></string>
    <string name="winner" id="@+id/winner"></string>
    <string name="playai" id="@+id/playai">Play A.I.</string>
</resources>
