<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:background="#333333" android:name=".endGame">

<!-- The primary full-screen view. This can be replaced with whatever view
     is needed to present your content, e.g. VideoView, SurfaceView,
     TextureView, etc. -->
<TextView android:id="@+id/fullscreen_content" android:layout_width="match_parent"
    android:layout_height="match_parent" android:keepScreenOn="true" android:textColor="#33b5e5"
    android:textStyle="bold" android:textSize="50sp" android:gravity="center"
    android:text="@string/background_text" />

<!-- This FrameLayout insets its children based on system windows using
     android:fitsSystemWindows. -->
<FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/backGround">

    <LinearLayout android:id="@+id/fullscreen_content_controls" style="?metaButtonBarStyle"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@color/black_overlay" android:orientation="horizontal"
        tools:ignore="UselessParent">

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/scores"
        android:id="@+id/scores"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textSize="40dp"
        android:layout_marginBottom="100dp" />

    <Button
        android:layout_width="179dp"
        android:layout_height="74dp"
        android:layout_marginBottom="75dp"
        android:text="@string/exit"
        android:id="@+id/exitGame"
        android:layout_gravity="center_horizontal|bottom" />

</FrameLayout>

</FrameLayout>
